# esp32-opencv

./: .gitignore  CMakeLists.txt  README.md  README.rst
cmake/checks/: atomic_check.cpp
esp32/: README.rst
esp32/doc/: build_configurations.md  detailed_build_procedure.md  optimization.md
esp32/examples/: .gitignore
esp32/examples/esp_opencv/: CMakeLists.txt  README.md  sdkconfig.old
esp32/examples/esp_opencv/main/: hello_opencv.cpp
esp32/examples/esp_opencv_basic/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
esp32/examples/esp_opencv_basic/main/: CMakeLists.txt
esp32/examples/esp_opencv_tests/: CMakeLists.txt  README.md  benchmark_27-03.txt  benchmark_with-optimization_26-03.txt  benchmark_without-optimization_26-03.txt  partitions.csv  sdkconfig  sdkconfig.old  sod.cbp
esp32/examples/esp_opencv_tests/benchmark/: bm_build-debug.rst  bm_build-release.rst  bm_concat.rst
esp32/examples/esp_opencv_tests/main/: CMakeLists.txt  hello_opencv.cpp  main.cpp  measure.hpp  report.cpp  report.hpp  system.cpp  system.hpp
esp32/examples/esp_opencv_tests/main/opencv/opencv2/: cvconfig.h
esp32/examples/esp_opencv_tests/spiffs_images/: hello.txt
esp32/examples/hello_opencv/: CMakeLists.txt  README.md  partitions.csv
esp32/examples/hello_opencv/main/: hello_opencv.cpp
esp32/examples/hello_opencv/main/opencv/opencv2/: cvconfig.h
esp32/examples/hello_opencv/main/opencv/opencv2/core/utils/: allocator_stats.impl.hpp
esp32/examples/ttgo_demo/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp32/examples/ttgo_demo/components/esp32-camera/sensors/private_include/: ov2640_regs.h
esp32/examples/ttgo_demo/components/lcd/: CMakeLists.txt  iot_lcd.cpp  spi_lcd.c
esp32/examples/ttgo_demo/components/lcd/include/: iot_lcd.h  spi_lcd.h
esp32/examples/ttgo_demo/components/lcd/test/: lcd_example.cpp  lcd_image.h  lcd_thermostat.cpp
esp32/examples/ttgo_demo/components/lvgl_gui/: CMakeLists.txt  component.mk.old  lv_conf.h  lvgl.c
esp32/examples/ttgo_demo/components/lvgl_gui/include/: iot_lvgl.h
esp32/examples/ttgo_demo/main/: CMakeLists.txt  app_camera.c  app_screen.cpp  main.cpp  system.cpp
esp32/examples/ttgo_demo/main/include/: app_camera.h  app_screen.h  board_def.h  system.h
esp32/lib/debug_build/opencv/opencv2/: cvconfig.h
esp32/lib/release_build/opencv/opencv2/core/utils/: allocator_stats.impl.hpp
esp32/scripts/: build_opencv_for_esp32.sh  install_esp32_toolchain.sh  install_esp32_xcompiler_scratch.sh
esp32/scripts/resources/: alloc_fix.cpp  toolchain-esp32.cmake
modules/core/src/: glob.cpp  matmul.simd.hpp  parallel.cpp  parallel_impl.cpp  system.cpp
modules/imgproc/src/: color.cpp  color.hpp  color.simd_helpers.hpp  histogram.cpp  imgwarp.cpp
